# CPP_Profiler

./: .gitignore  CMakeLists.txt
include/CPP_Profiler/: profiler.h
src/: main.cpp  profiler.cpp
